--- a/HTML Tutorial/html_form.html
+++ b/HTML Tutorial/html_form.html
@@ -30,6 +30,45 @@
             background-color: lightgoldenrodyellow;
             padding: 20px;
         }
+
+        .color {
+            background-color: lightblue;
+            padding: 20px;
+        }
+
+        .date {
+            background-color: rgb(175, 216, 252);
+            padding: 20px;
+        }
+
+        .datalist {
+            background-color: lightpink;
+            padding: 20px;
+        }
+        .output {
+            background-color: blanchedalmond;
+            padding: 20px;
+        }
+
+        .file {
+            background-color: azure;
+            padding: 20px;
+        }
+
+        .quantity {
+            background-color: aliceblue;
+            padding: 20px;
+        }
+
+        .range {
+            background-color: rgb(235, 213, 236);
+            padding: 20px;
+        }
+        
+        .attributes {
+            background-color: rgb(185, 214, 244);
+            padding: 20px;
+        }
     </style>
 
 </head>
@@ -42,14 +81,27 @@
             <fieldset>
                 <legend>Personalia:</legend>
                 <label for="fname"> First name: </label><br>
-                <input type="text" id="fname" name="fname"><br>
+                <input type="text" id="fname" name="fname" value="Horipriya" disabled><br>
                 <label for="lname"> Last name: </label><br>
-                <input type="text" id="'lname" name="lname"><br><br>
+                <input type="text" id="'lname" name="lname" value="Arpita" readonly><br>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" autocomplete="off"><br>
+                <label for="pin">PIN:</label><br>
+                <input type="text" id="pin" name="pin" maxlength="4" size="4"><br>
+                <label for="pwd">Password:</label><br>
+                <input type="password" id="pwd" name="pwd"><br>
+                <label for="phone">Enter your phone number:</label><br>
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+
+                <input type="hidden" id="custId" name="custId" value="3487"><br>
+                <br>
                 <input type="submit" value="submit">
+                <input type="reset"><br><br>
+                <input type="image" src="submit_img.png" alt="Submit" width="50" height="30">
             </fieldset>
             
         </form>
-
+        <br>
         <button type="button" onclick="alert('You clicked')"> Click Me </button>
 
     </div>
@@ -117,7 +169,9 @@
 
 
     <div class="datalist">
+        <h1>The Datalist element </h1>
         <form>
+            <br>
             <input list="browsers" name="browsers">
             <datalist id="browsers">
                 <option value="Internet Explorer">
@@ -126,9 +180,161 @@
                 <option value="Opera">
                 <option value="Safari">
             </datalist>
+            <input type="submit">
         </form>
     </div>
 
+
+    <div class="output">
+        <h1>Output element </h1>
+        <p> output making two sums </p>
+
+        <form oninput="x.value=parseInt(a.value)+parseInt(b.value)">
+            <input type="number" id="a" name="a" value="50">
+            <input type="number" id="b" name="b" value="50">
+            = 
+            <output name="x" for="a b"></output>
+            <br><br>
+
+            <input type="submit">
+        </form>
+    </div>
+
+    <div class="color">
+        <h1>Showing a color picker</h1>
+        <h4>Select Your Favourite Colour </h4>
+
+        <form>
+            <label for="favcolor">Select you favourite color:  </label>
+            <input type="color" id="favcolor" name="favcolor">
+            <input type="submit">
+        </form>
+    </div>
+
+    <div class="date">
+        <h1>Date Picker </h1>
+        <form>
+            <label for="birthday">Birthday : </label>
+            <input type="date" id="birthday" name="birthday">
+            <br>
+            <label for="bdaymonth">Birthday (month and year):</label>
+            <input type="month" id="bdaymonth" name="bdaymonth">
+            <input type="submit">
+        </form>
+
+        <br>
+        <h4>Date Field Restriction : </h4>
+        <form>
+            <label for="datemin">Enter a date before 2005-08-12  : </label>
+            <input type="date" id="datemin" name="datemin" min="2005-08-12"><br><br>
+            <label for="datemax">Enter a date after 2011-08-28  : </label>
+            <input type="date" id="datemax" name="datemax" min="2005-08-12">
+        </form>
+
+        <br>
+        <h4>Local Date Field : </h4>
+        <form>
+            <label for="birthdaytime">BirthDay (date and time)  : </label>
+            <input type="datetime-local" id="birthdaytime" name="birthdaytime"><br><br>
+            <input type="submit">
+        </form>
+
+        <br>
+        <h4>Input Type Week : </h4>
+        <form>
+            <label for="week">Select a week  : </label>
+            <input type="week" id="week" name="week"><br><br>
+            <input type="submit">
+        </form>
+
+        <br>
+        <h4>Time Input : </h4>
+        <form>
+            <label for="appt">Select a Time : </label>
+            <input type="time" id="appt" name="appt"><br><br>
+            <input type="submit">
+        </form>
+    </div>
+
+
+    <div class="file">
+        <h1>File Upload </h1>
+        <h4>Showing a file-select field : </h4>
+
+        <form>
+            <label for="myfile">Select a File : </label>
+            <input type="file" id="myfile" name="myfile"><br><br>
+            <input type="submit">
+        </form>
+
+        <h4>Selecting multiple files : </h4>
+        <form>
+            <label for="files">Select files : </label>
+            <input type="file" id="files" name="files" multiple>
+        </form>
+
+        <br>
+        <h4>Input Type Search Google : </h4>
+        <form>
+            <label for="gsearch">Search Google:</label>
+            <input type="search" id="gsearch" name="gsearch">
+        </form>
+
+        <br>
+        <h4>Input Type URL : </h4>
+        <form>
+            <label for="homepage">Add Your HomePage : </label>
+            <input type="url" id="homepage" name="homepage">
+        </form>
+    </div>
+
+    <div class="quantity">
+        <h1>Quantity Numeric Steps</h1>
+
+        <form>
+            <label for="quantity">Quantity (between 1 and 5):</label>
+            <input type="number" id="quantity" name="quantity" min="1" max="5"><br><br>
+            <label for="quantity2">Quantity Steps : </label>
+            <input type="number" id="quantity2" name="quantity2" min="0" max="100" step="10" value="30">
+            <br><br>
+            <input type="submit">
+
+        </form>
+    </div>
+
+    <div class="range">
+        <h1>Range Field :</h1>
+
+        <form oninput="x.value=parseInt(vol.value)">
+            <label for="vol">Volume (between 0 to 100) : </label>
+            <input type="range" id="vol" name="vol" min="0" max="100">
+            <output name="x" for="vol"></output>
+            <br><br>
+            <input type="submit">
+        </form>
+    </div>
+
+    <div class="attributes">
+        <h1>Attributes : </h1>
+
+        <h4>Use of placeholder : </h4>
+        <form>
+            <label for="phone">Enter a phone number:</label>
+            <input type="tel" id="phone" name="phone"
+            placeholder="123-45-678"
+            pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+            <input type="submit">
+        </form>
+
+        <h4>Pattern Attributes : </h4>
+        <form>
+            <label for="country_code">Country code:</label>
+            <input type="text" id="country_code" name="country_code"
+            pattern="[A-Za-z]{3}" title="Three letter country code">
+            <input type="submit">
+        </form>
+
+    </div>
 
 </body>
 </html>
