--- a/HTML Tutorial/form_task.html
+++ b/HTML Tutorial/form_task.html
@@ -25,7 +25,7 @@
         <input type="email" id="email" name="email" placeholder="EMAIL_ADDRESS">
 
         <br><br>
-        <label for="selecttour">Select Tour Package * :</label><br>
+        <label for="place">Select Tour Package * :</label><br>
         <select id="place" name="place">
             <option value="Goa">Goa</option>
             <option value="Kolkata">Kolkata</option>
@@ -35,7 +35,7 @@
 
         <br><br>
         <label for="arrdate">Arrival Date * : </label><br>
-        <input type="date" id="date" name="date">
+        <input type="date" id="arrdate" name="arrdate">
 
         <br><br>
         <label for="person">Number of persons * : </label><br>
@@ -56,9 +56,9 @@
         
         <br>
         <label>Terms and conditions * </label><br>
-        <input type="radio" id="agree" name="agree" value="agree">
+        <input type="radio" id="agree" name="agree-disagree" value="agree">
         <label for="agree">I agree</label>
-        <input type="radio" id="disagree" name="disagree" value="disagree">
+        <input type="radio" id="disagree" name="agree-disagree" value="disagree">
         <label for="disagree">I disagree </label>
 
         <br><br>
