--- a/JS Tutorial/JsIntro.html
+++ b/JS Tutorial/JsIntro.html
@@ -31,6 +31,27 @@
           background-color: #111111;
         }
         
+        .first {
+          padding: 20px;
+        }
+
+        .second {
+          padding: 20px;
+        }
+
+        .third {
+          padding: 20px;
+        }
+
+        .fourth {
+          padding: 20px;
+
+        }
+
+        .fifth {
+          padding: 20px;
+        }
+        
     </style>
 
 </head>
